ready for init presentation

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-html, body, #lexicata {
+html, body, #tags {
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
