--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,7 @@
   flex: 1;
   justify-content: center;
   align-items: center;
-  background: white;
+  background: #fff;
 }
 
 .app-child:first-child {
